[tool.poetry]
name = "plotly_calplot"
version = "0.1.20"
description = "Calendar Plot made with Plotly"
authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
license = "MIT"
repository = "https://github.com/brunorosilva/plotly-calplot"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
plotly = ">=5.23.0"
pandas = ">=2.2.0"
numpy = ">=2.0.0"
pytz = ">=2024.1"

[tool.poetry.group.dev.dependencies]
black = ">=24.8.0"
isort = ">=5.13.2"
streamlit = ">=1.37.0"
pytest = ">=8.3.2"
pytest-cov = ">=4.0.0"
flake8 = "^4.0.1"
vulture = "^2.3"
mypy = "^1.7.1"
poethepoet = "^0.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]

[tool.pytest.ini_options]
timeout = 300
testpaths = ["tests"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
files = "plotly_calplot"
allow_redefinition = false
disable_error_code = ["import-untyped","import-not-found"]

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.poe.tasks]
isort = {cmd = "isort plotly_calplot tests", help = "Sort imports"}
black = {cmd = "black -l 120 plotly_calplot tests", help = "Format source code"}
format = {sequence = ["isort", "black"], help = "Format source code & sort imports"}
lint = {cmd = "flake8 --max-cognitive-complexity=15 plotly_calplot", help = "Lint and complexity score for source code"}
mypy = {cmd = "mypy plotly_calplot", help = "Type check code"}
test = {cmd = "pytest --cov=plotly_calplot --cov-config=pyproject.toml", help = "Run test suite"}
precommit = {sequence = ["format", "lint", "mypy", "test"], help = "Prepare for commit"}
