[tool.poetry]
name = "plotly_calplot"
version = "0.2.0"
description = "Calendar Plot made with Plotly"
authors = ["Bruno Rodrigues Silva <b.rosilva1@gmail.com>"]
license = "MIT"
repository = "https://github.com/brunorosilva/plotly-calplot"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
plotly = ">=5.23.0"
pandas = ">=2.2.0"
numpy = ">=2.0.0"
pytz = ">=2024.1"

[tool.poetry.group.dev.dependencies]
black = "^25"
coverage = "^7"
flake8 = "^6"
flake8-annotations = "^3"
flake8-black = "^0.4"
flake8-bugbear = "^23"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-isort = "^6"
flake8-mutable = "^1.2.0"
flake8-simplify = "^0.21.0"
flake8-super = "^0.1.3"
isort = "^6.0.1"
mypy = "^1"
pep8-naming = "^0.13.2"
poethepoet = "^0.37.0"
pytest = ">=8.3.2"
pytest-cov = ">=4.0.0"
pytest-rerunfailures = "^15"
pytest-sugar = "^0.9.4"
pytest-timeout = "^2.1.0"
streamlit = ">=1.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.html]
title = "Coverage Report"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]

[tool.pytest.ini_options]
timeout = 300
testpaths = ["tests"]
norecursedirs = ["*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
addopts = [
    "--cov=plotly_calplot",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
files = "plotly_calplot"
allow_redefinition = false
disable_error_code = ["import-untyped","import-not-found"]
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.poe.tasks]
isort = {cmd = "isort plotly_calplot tests", help = "Sort imports"}
black = {cmd = "black -l 120 plotly_calplot tests", help = "Format source code"}
format = {sequence = ["isort", "black"], help = "Format source code & sort imports"}
lint = {cmd = "flake8 plotly_calplot", help = "Lint and complexity score for source code"}
mypy = {cmd = "mypy plotly_calplot", help = "Type check code"}
test = {cmd = "pytest --cov=plotly_calplot --cov-config=pyproject.toml", help = "Run test suite"}
precommit = {sequence = ["format", "lint", "mypy", "test"], help = "Prepare for commit"}
